@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rpict.1,v 1.18 2015/02/24 19:39:26 greg Exp $"
+.\" RCSid "$Id: rpict.1,v 1.19 2015/05/26 10:00:46 greg Exp $"
 .TH RPICT 1 2/26/99 RADIANCE
 .SH NAME
 rpict - generate a RADIANCE picture
@@ -876,4 +876,3 @@ Greg Ward
 .SH "SEE ALSO"
 getinfo(1), lookamb(1), mkpmap(1), oconv(1), pdfblur(1), pfilt(1), 
 pinterp(1), pmblur(1), printf(3), ra_rgbe(1), rad(1), rtrace(1), rvu(1)
-
