@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rvu.1,v 1.9 2013/12/05 18:12:42 greg Exp $"
+.\" RCSid "$Id: rvu.1,v 1.10 2015/05/26 10:00:47 greg Exp $"
 .TH RVU 1 1/1/04 RADIANCE
 .SH NAME
 rvu - generate RADIANCE images interactively
@@ -364,4 +364,5 @@ DISPLAY_GAMMA		the value to use for monitor gamma correction.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-getinfo(1), lookamb(1), oconv(1), pfilt(1), rad(1), rpict(1), rtrace(1)
+getinfo(1), lookamb(1), mkpmap(1),
+oconv(1), pfilt(1), rad(1), rpict(1), rtrace(1)
